# rag-chatbot

./: main.py  pyproject.toml  streamlit1.py  tempCodeRunnerFile.python
faiss_index/: index.faiss  index.pkl
notebook/: document.ipynb  pdf_loader.ipynb  streamlit.py
notebook/faiss_index/: index.pkl
